--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -8,9 +8,12 @@
       .media
         .media-body
           %h4.media-heading
+            = image_tag(post.image.thumb.url) if post.image?
             = link_to (markdown post.title), [@topic, post]
           %small
-            submitted #{time_ago_in_words(post.created_at)} ago by #{post.user.name}
+            = image_tag(post.user.avatar.tiny.url) if post.user.avatar?
+            submitted #{time_ago_in_words(post.created_at)} ago by
+            \#{post.user.name}
             %br/
             = post.comments.count
             Comments
