--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,6 @@
-%h1= markdown @post.title
+%h1
+  = image_tag(@post.image.thumb.url) if @post.image?
+  = markdown @post.title
 .row
   .col-md-8
     %small
