--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -12,5 +12,13 @@
   = form_group_tag(post.errors[:body]) do
     = f.label :body
     = f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body"
+  - if post.image?
+  .form-group
+    %p Current image
+    = image_tag( current_user.image.thumb.url )
+  .form-group
+    = f.label :image
+    = f.file_field :image
+    = f.hidden_field :image_cache
   .form-group
     = f.submit "Save", class: 'btn btn-success'
