--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -21,3 +21,5 @@
   .col-md-4
     - if policy(Post.new).create?
       = link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success'
+    - if policy(@topic).destroy?
+      = link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' }
