--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,10 +1,5 @@
-.media
-  = link_to '#', class: 'pull-left' do
-    = image_tag(comment.user.avatar.small.url) if comment.user.avatar?
-  .media-body
+%p
+  = comment.body
+  - if comment.user
     %small
-      = comment.user.name
-      commented #{time_ago_in_words(comment.created_at)} ago
-      - if policy(comment).destroy?
-        | #{link_to "Delete", [@topic, @post, comment], method: :delete}
-    %p= comment.body
+      %em= comment.user.name || comment.user.email
