--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,24 +1,6 @@
-= form_for [topic, post] do |f|
-  - if post.errors.any?
-    .alert.alert-danger
-      %h4
-        There are #{pluralize(post.errors.count, "error")}.
-      %ul
-        - post.errors.full_messages.each do |msg|
-          %li= msg
-  = form_group_tag(post.errors[:title]) do
-    = f.label :title
-    = f.text_field :title, class: 'form-control', placeholder: "Enter post title"
-  = form_group_tag(post.errors[:body]) do
+- if current_user
+  %h4 Comment on this post:
+  = form_for [topic, post, comment] do |f|
     = f.label :body
-    = f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body"
-  - if post.image?
-    .form-group
-      %p Current image
-      = image_tag( current_user.image.thumb.url )
-  .form-group
-    = f.label :image
-    = f.file_field :image
-    = f.hidden_field :image_cache
-  .form-group
-    = f.submit "Save", class: 'btn btn-success'
+    = f.text_field :body
+    = f.submit
