Destroyed comments, refactored policies, made shallower nesting

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,5 +1,10 @@
-%p
-  = comment.body
-  - if comment.user
+.media
+  = link_to '#', class: 'pull-left' do
+    = image_tag(comment.user.avatar.small.url) if comment.user.avatar?
+  .media-body
     %small
-      %em= comment.user.name || comment.user.email
+      = comment.user.name
+      commented #{time_ago_in_words(comment.created_at)} ago
+      - if policy(comment).destroy?
+        | #{link_to "Delete", [@post, comment], method: :delete}
+    %p= comment.body
