--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,6 +1,6 @@
 - if current_user
   %h4 Comment on this post:
-  = form_for [topic, post, comment] do |f|
+  = form_for [@post, @post.comments.build] do |f|
     = f.label :body
     = f.text_field :body
     = f.submit
