--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -11,10 +11,10 @@
   .col-md-4
     - if policy(@post).edit?
       = link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-success'
-    - if policy(@post).destroy?
-      = link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' }
+  - if policy(@post).destroy?
+    = link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' }
 .row
   %h2 Comments
   .col-md-12
     = render @comments
-    = render 'comments/form', topic: @topic, comment: @comment, post: @post
+    = render 'comments/form'
