--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,10 +1,10 @@
-.media
-  = link_to '#', class: 'pull-left' do
-    = image_tag(comment.user.avatar.small.url) if comment.user.avatar?
-  .media-body
-    %small
-      = comment.user.name
-      commented #{time_ago_in_words(comment.created_at)} ago
+%h4 Comments
+- comments.each do |comment|
+  .media
+    = link_to '#', class: 'pull-left' do
+      = image_tag(comment.user.avatar.small.url) if comment.user.avatar?
+    .media-body
+      %small #{comment.user.name} commented #{time_ago_in_words(comment.created_at)} ago
       - if policy(comment).destroy?
         | #{link_to "Delete", [@post, comment], method: :delete}
-    %p= comment.body
+      %p= comment.body
