--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -14,7 +14,11 @@
   - if policy(@post).destroy?
     = link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' }
 .row
-  %h2 Comments
-  .col-md-12
-    = render @comments
-    = render 'comments/form'
+  .col-md-4
+    = render partial: 'comments/comment', locals: {comments: @comments}
+.row
+  .col-md-4
+    - if current_user
+      = render partial: 'comments/form', locals: {topic: @topic, post: @post}
+    - else
+      #{link_to "Sign in", new_user_session_path} to comment
