Routed Votes, created Votes Controller

--- a/app/views/votes/_voter.html.haml
+++ b/app/views/votes/_voter.html.haml
@@ -1,6 +1,6 @@
-.pull-left.vote-arrows
-  %div
-    %div= link_to " ", '#', class: 'glyphicon glyphicon-chevron-up'
+- if policy(Vote.new).create?
+  .pull-left.vote-arrows
+    %div= link_to " ", post_up_vote_path(post), class: 'glyphicon glyphicon-chevron-up', method: :post
     %div
       %strong= post.points
-    %div= link_to " ", '#', class: 'glyphicon glyphicon-chevron-down'
+    %div= link_to " ", post_down_vote_path(post), class: 'glyphicon glyphicon-chevron-down', method: :post
