--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -19,6 +19,7 @@
     %small
       = pluralize(@post.up_votes, 'up vote')
       = pluralize(@post.down_votes, 'down vote')
+  = render partial: 'favorites/favorite', locals: { post: @post }
 .row
   .col-md-4
     = render partial: 'comments/comment', locals: {comments: @comments}
