--- a/app/views/favorites/_favorite.html.haml
+++ b/app/views/favorites/_favorite.html.haml
@@ -1,5 +1,8 @@
-.favorite
-  - if favorite = current_user.favorited(post)
-    Favorited
-  - else
-    Want to favorite this?
+- if policy(Favorite.new).create?
+  .favorite
+    - if favorite = current_user.favorited(post)
+      = link_to [post, favorite], class: 'btn btn-danger', method: :delete do
+        %i.glyphicon.glyphicon-star-empty>         \&nbsp; Unfavorite
+    - else
+      = link_to [post, Favorite.new], class: 'btn btn-primary', method: :post do
+        %i.glyphicon.glyphicon-star>         \&nbsp; Favorite
