--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,6 +1,6 @@
 %h4 Comments
 - comments.each do |comment|
-  .media
+  = content_tag :div, class: 'media', id: "comment-#{comment.id}" do
     = link_to '#', class: 'pull-left' do
       = image_tag(comment.user.avatar.small.url) if comment.user.avatar?
     .media-body
