--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -4,20 +4,7 @@
 .row
   .col-md-8
     %p.lead= @topic.description
-    - @posts.each do |post|
-      .media
-        = render partial: 'votes/voter', locals: { post: post }
-        .media-body
-          %h4.media-heading
-            = image_tag(post.image.thumb.url) if post.image?
-            = link_to (markdown post.title), [@topic, post]
-          %small
-            = image_tag(post.user.avatar.tiny.url) if post.user.avatar?
-            submitted #{time_ago_in_words(post.created_at)} ago by
-            \#{post.user.name}
-            %br/
-            = post.comments.count
-            Comments
+    = render @posts
     = will_paginate @posts
   .col-md-4
     - if policy(Post.new).create?
