--- a/app/views/topics/posts/show.html.haml
+++ b/app/views/topics/posts/show.html.haml
@@ -22,7 +22,7 @@
   = render partial: 'favorites/favorite', locals: { post: @post }
 .row
   .col-md-4
-    = render partial: 'comments/comment', locals: {comments: @comments}
+    = render partial: 'comments/comment', collection: @comments
 .row
   .col-md-4
     - if current_user
