--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,7 +7,8 @@
         %h2.media-heading= @user.name
         %small
           = pluralize(@user.posts.count, 'post')
-          = pluralize(@user.comments.count, 'comment')
+          .js-comments-count
+            = pluralize(@user.comments.count, 'comment')
 %br
 
 .row
